# cogent-alpha

./: .gitignore  AGENTS.md  BLOCKING.md  SCISSORS_UPLOADS.md  STATUS.md  TEST_FAILURE.md  pyproject.toml  test_results.txt  test_results_011.txt  test_results_012_delta.txt  test_results_stack_036_040.txt  test_seeds.sh  test_stack_036_040.sh
.claude/skills/: coach.improve.md
.coach/: state.json  todos.md
.cogent/: state.json  todos.md
cogames/: __init__.py  gamelet.py  policy.py
cogames/cvc/: cvc_policy.py
cogent/: IDENTITY.md  MEMORY.md  dashboard.md  on-create.md  state.json  test_in_progress.md  test_in_progress_011.md  todos.md
cogent/dashboard/: index.html
cogent/hooks/: on-sleep.md  on-wake.md
cogent/skills/: improve.md
cvc/agent/: README.md
docs/: architecture.md  coach-dashboard.html  cogames.md  how-to-train-your-agent.html
docs/design/: proximal_coglet_optimizer.md
docs/plans/: 2026-03-28-pco-implementation.md  2026-04-01-cogent-lifecycle-design.md
examples/jury_llm.cog/: manifest.toml
examples/jury_trial_llm.cog/: manifest.toml  trial_llm.py
memory/: MEMORY.md  conversation.jsonl  feedback_hp_thresholds.md  season_vs_freeplay.md
policy_bundle/: coglet_policy.py
skills/improve.dashboard/: SKILL.md
skills/initialize/: SKILL.md
src/cogamer/: gamelet.py  improve.py
src/coglet/: cli.py  runtime.py  trace.py
tests/: test_cli.py  test_cogweb_ui.py  test_improvements.py  test_integration.py  test_pco_integration.py  test_pco_learner.py  test_pco_llm_experiment.py  test_pco_optimizer.py  test_runtime.py  test_trace.py
(+51 files in other folders)
